--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
 
     <h1>Hello and welcome to Kyle's racist ahh world.</h1>
-    <button id="CrackerButton">This is Kyle's Favorite</button>
-    <div id="CrackerContainer" style="display: none;">
-        <h2>Cracker</h2>
-        <p>Click the button below to see Kyle's racist behavior.</p>
-        <button id="CrackerButton2">Click me</button>
 
+    <div>
+        <div class = buttons>
+            <button id="Button">This is Kyle's Favorite Button</button>
+
+        </div>
+    </div>
+<script src = "index.js"></script>
 </body>
 </html>
